[package]
name = "kubo"
about = "A dotfiles manager with real time file watching and 100% less sym links!"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.3.16", features = ["derive"] }
env_logger = "0.10.0"
fd-lock = "4.0.0"
fs_extra = "1.3.0"
log = "0.4.19"
notify = "6.0.1"
toml = "0.7.6"
toml_edit = "0.19.14"
